feat: Initial implementation

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-OPENAI_API_KEY=your-api-key
+# GitHub Personal Access Token (read-only, repo or public_repo scope)
+GITHUB_TOKEN=
+
+# Anthropic API Key (for claude models)
+ANTHROPIC_API_KEY=
