--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "mastra build",
     "start": "mastra start"
   },
-  "keywords": ["mastra", "code-review", "github", "ai-agent"],
+  "keywords": [
+    "mastra",
+    "code-review",
+    "github",
+    "ai-agent"
+  ],
   "license": "ISC",
   "packageManager": "pnpm@10.27.0",
   "type": "module",
@@ -16,15 +21,15 @@
     "node": ">=22.13.0"
   },
   "dependencies": {
-    "@mastra/core": "^1.3.0",
-    "@mastra/libsql": "^1.3.0",
+    "@mastra/core": "^1.4.0",
+    "@mastra/libsql": "^1.4.0",
     "@mastra/loggers": "^1.0.1",
-    "@mastra/memory": "^1.2.0",
+    "@mastra/memory": "^1.3.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^25.2.3",
-    "mastra": "^1.3.0",
+    "mastra": "^1.3.1",
     "typescript": "^5.9.3"
   }
 }
