--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "tsc --noEmit",
     "dev": "mastra dev",
     "build": "mastra build",
-    "start": "mastra start"
+    "start": "mastra start",
+    "format": "prettier --write ."
   },
   "keywords": [
     "mastra",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/node": "^25.2.3",
     "mastra": "^1.3.1",
+    "prettier": "^3.8.1",
     "typescript": "^5.9.3"
   }
 }
